# corse_work_3

./: README.md  main.py  pyproject.toml  utils.py
tests/: tests_course_work.py
