[tool.poetry]
name = "corse-work"
version = "0.1.0"
description = ""
authors = ["Павел <claid07@mail.ru>"]
readme = "README.md"
packages = [{include = "corse_work"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
